[gd_scene load_steps=6 format=3 uid="uid://1j78051dlaxx"]

[ext_resource type="Texture2D" uid="uid://ben044cehr13e" path="res://assets/ball.png" id="1_7s4qf"]
[ext_resource type="Script" uid="uid://cd7m0rkxloyml" path="res://scripts/ball.gd" id="1_cxlvu"]
[ext_resource type="AudioStream" uid="uid://booiprdan0vox" path="res://assets/sounds/pong-hit-low.wav" id="3_4dx81"]
[ext_resource type="AudioStream" uid="uid://dgi20o5yqwfw" path="res://assets/sounds/pong-hit-high.wav" id="3_f7cbr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxlvu"]
size = Vector2(40, 40)

[node name="ball" type="Area2D" groups=["ball"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_cxlvu")
hit_sounds = Array[AudioStream]([ExtResource("3_f7cbr"), ExtResource("3_4dx81")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.4703484e-07, 1)
shape = SubResource("RectangleShape2D_cxlvu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("1_7s4qf")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
